introduce type-erased versions of compression algorithms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,14 @@ project(thesisMerged)
 
 set(CMAKE_CXX_STANDARD 26)
 
-add_executable(thesisMerged main.cpp
-        lib/compress.h)
+include_directories(include)
+
+set(SOURCE_FILES
+        src/lzw.cpp
+        src/rle.cpp
+        src/huffman.cpp
+        src/compress.cpp
+        main.cpp
+)
+
+add_executable(thesisMerged ${SOURCE_FILES})
